change for homehandlebar

--- a/templates/views/Home.hbs
+++ b/templates/views/Home.hbs
@@ -13,7 +13,7 @@
   <body>
 
 {{!-- NAVBAR START --}}
-<nav class="navbar navbar-light bg-light justify-content-between">
+<nav class="navbar navbar-dark bg-primary justify-content-between">
   <a class="navbar-brand">I.S</a>
   <form class="form-inline">
     <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
